--- a/index.html
+++ b/index.html
@@ -8318,7 +8318,7 @@ const quarterlyReportsSection = `
     `Agency: ${agencyInfo.agency}\n` +
     `Contact: ${agencyInfo.contact}\n` +
     `Email: ${agencyInfo.email}\n\n` +
-    `Please send a Teams meeting link for an agency feedback session.\n\n` +
+    `Please share your feedback below. We’ll review it and provide an acknowledgment as soon as possible.\n\n` +
     `Thank you.`
     );
 
