--- a/index.html
+++ b/index.html
@@ -5046,8 +5046,14 @@ function displayImpactLevel(impactLevel, thresholds, metadata) {
 
         function filterKsis() {
             const searchTerm = currentFilters.search.toLowerCase();
-            const statusFilter = currentFilters.status;
+            const statusFilter = currentFilters.status || '';
             const categoryFilter = currentFilters.category;
+
+            console.log('🔊 Filtering KSIs with:', { 
+             status: statusFilter || 'all', 
+             category: categoryFilter || 'all',
+             search: searchTerm || 'none'
+            });
 
             filteredKsis = allKsis.filter(ksi => {
                 const matchesSearch = !searchTerm || 
@@ -5066,6 +5072,7 @@ function displayImpactLevel(impactLevel, thresholds, metadata) {
                 return matchesSearch && matchesStatus && matchesCategory;
             });
 
+            console.log(`✅ Filtered ${filteredKsis.length} of ${allKsis.length} KSIs`);            
             renderKsis();
             updateFilterChips();
         }
@@ -5083,12 +5090,15 @@ function displayImpactLevel(impactLevel, thresholds, metadata) {
 
         function updateFilterChips() {
             const chips = document.querySelectorAll('.filter-chip');
+            const currentStatus = currentFilters.status || '';            
             chips.forEach(chip => {
-                const status = chip.getAttribute('data-status');
-                chip.classList.toggle('active', status === currentFilters.status);
+                const status = chip.getAttribute('data-status') || '';
+                chip.classList.toggle('active', status === currentStatus);
             });
         }
 
+        console.log('🏷️ Filter chips updated, active status:', currentStatus || 'all');
+        
         function setupEventListeners() {
             document.getElementById('search-input').addEventListener('input', (e) => {
                 currentFilters.search = e.target.value;
@@ -5107,7 +5117,8 @@ function displayImpactLevel(impactLevel, thresholds, metadata) {
 
             document.querySelectorAll('.filter-chip').forEach(chip => {
                 chip.addEventListener('click', () => {
-                    const status = chip.getAttribute('data-status');
+                    const status = chip.getAttribute('data-status') || '';
+                    console.log('🎯 Filter chip clicked:', status || 'all');                    
                     currentFilters.status = status;
                     document.getElementById('status-filter').value = status;
                     filterKsis();
